# byzantex_cli

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.claude/: settings.local.json
byzantex/: classifier.py  cli.py  ui.py
byzantex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
byzantex/parser/: log_parser.py  rtl_indexer.py
