[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byzantex"
version = "0.1.0"
description = "Regression Triage in 30 Seconds"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
]

[project.scripts]
byzantex = "byzantex.cli:app"